--- a/kinh-nghiem/may-tinh/cryptocurrency.html
+++ b/kinh-nghiem/may-tinh/cryptocurrency.html
@@ -255,13 +255,13 @@ Giao-dịch trên sàn thì tốn phí-giao-dịch, phí chuyển bitcoin vào v
 <h3 id="keep">Giữ wallet thế nào để khỏi mất?</h3>
 <p>Custodial wallet trong các sàn-giao-dịch là mục-tiêu của hacker. Hacker luôn tìm cách chiếm-đoạt toàn-bộ wallet trong server của sàn. Lượng bitcoin chưa định bán thì nên chuyển từ sàn vào cold wallet để tránh bị hack.</p>
 <p>Wallet trong máy-tính và smartphone dễ bị mất-cắp qua các phần mềm gián điệp. Phần-mềm gián-điệp tìm cách trộm private key của tài-khoản rồi gửi về cho kẻ-cắp. Để an-toàn hơn, người ta để wallet trong các máy-tính sạch và không nối mạng, gọi là cold wallet. Người ta đặt ra các thủ-tục rất chặt-chẽ khi dùng cold wallet trong máy-tính để tránh bị mất-cắp.</p>
-<p>Trong nhiều trường-hợp, người chủ wallet sơ-suất để lộ passphrase của tài-khoản, ví-dụ như ghi vào file rồi không giữ kỹ, ghi vào sổ rồi để người khác thấy, chụp màn-hình rồi để lộ file hình…</p>
+<p>Trong nhiều trường-hợp, người chủ wallet sơ-suất để lộ passphrase của tài-khoản, ví-dụ như ghi vào file text hoặc file hình rồi không giữ kỹ, ghi vào sổ rồi để người khác thấy…</p>
 <p>Một rủi-ro khác là hư hoặc mất vật chứa wallet hoặc chứa private key: hư đĩa-cứng máy-tính, hư/mất smartphone hoặc USB flash drive. Do-đó cần phải backup các file wallet trên một vật chứa khác, tốt nhất là backup tự-động vào <a href="cloudstorage">cloud storage</a>. Hư/mất wallet cũng giống như khi bị rớt mất bóp-tiền hoặc khi tủ tiền giấy bị cháy. Bóp-tiền hay tờ tiền thật bị rớt ngoài đường thì người-qua-đường có thể lượm được. Bitcoin bị mất do mất private key thì không có người nào lượm được, nó không-bao-giờ được dùng nữa.</p>
 
 <h3 id="back">Mặt trái của Bitcoin</h3>
 <h3>Sự-đầu-cơ</h3>
 <p>Mặc-dù nó được gọi là currency, coin nhưng tôi thấy hiện-nay nó không phải là một loại tiền vì không tiện để dùng nó mua các thứ khác. Mỗi lần chuyển một lượng bitcoin dù nhỏ hay lớn đều tốn trung bình 10 phút, lâu hơn việc thanh-toán bằng thẻ. Tôi cho rằng Bitcoin là một loại tài-sản để <a href="/huu-ich/cach-dau-tu">đầu-cơ</a>.</p>
-<p>Gần-đây các hãng thẻ-thanh-toán như VISA, MasterCard đã hợp-tác với các sàn-giao-dịch tiền-điện-tử để phát-hành thẻ-thanh-toán cho chủ-thẻ đổi tiền-điện-tử ra các loại tiền fiat ngay khi thanh-toán. Loại thẻ đó tương-tự như thẻ-thanh-toán quốc-tế do các ngân-hàng Việt-Nam phát-hành, chủ-thẻ mua hàng bằng ngoại-tệ nhưng trả VND cho ngân-hàng.</p> 
+<p>Gần-đây các hãng thẻ-thanh-toán như VISA, MasterCard đã hợp-tác với các sàn-giao-dịch tiền-điện-tử để phát-hành thẻ-thanh-toán cho chủ-thẻ đổi tiền-điện-tử ra các loại <a href="https://vi.wikipedia.org/wiki/Ti%E1%BB%81n_%C4%91%E1%BB%8Bnh_danh" target='_blank'>tiền fiat—tiền-định-danh</a> ngay khi thanh-toán. Loại thẻ đó tương-tự như thẻ-thanh-toán quốc-tế do các ngân-hàng Việt-Nam phát-hành, chủ-thẻ mua hàng bằng ngoại-tệ nhưng trả VND cho ngân-hàng.</p> 
 
 
 <h3>Hao-tốn năng-lượng</h3>
@@ -271,7 +271,7 @@ Giao-dịch trên sàn thì tốn phí-giao-dịch, phí chuyển bitcoin vào v
 <h2 id="free">Làm-quen với tiền-điện-tử—cryptocurrency miễn-phí</h2>
 <p>Sau khi Bitcoin trở nên hấp-dẫn, tiền-điện-tử—cryptocurrency dựa trên blockchain là một xu-hướng mới của xã-hội loài-người. Rất nhiều tổ-chức đã tự phát-hành tiền-điện-tử, gọi là coin hoặc token. Coin là tiền-điện-tử có blockchain của riêng nó, token dùng blockchain của một coin đã có. Trên thị-trường đang có hàng ngàn loại token như vậy. Mỗi loại token có một mục-đích sử-dụng riêng trong một phạm-vi nhất-định, và có giá-trị quy ra tiền fiat. Vì có giá-trị đổi được ra tiền fiat nên người-ta mua-bán token để đầu-cơ giống như đầu-cơ ngoại-tệ.</p>
 <p>Bạn có-thể có được một vài loại token một cách hoàn-toàn miễn-phí và làm-quen với cách-dùng token. Vì miễn-phí nên giá trị của những token này không lớn, mục-đích chính chỉ là để làm-quen với tiền-điện-tử.</p>
-<p><a href="https://vi.wikipedia.org/wiki/Ti%E1%BB%81n_%C4%91%E1%BB%8Bnh_danh" target='_blank'>Tiền fiat—tiền-định-danh</a> do các chính-phủ phát-hành cũng có-thể được thanh-toán qua những phương-tiện điện-tử như thẻ-thanh-toán, chuyển-khoản… nhưng nó không phải là tiền-điện-tử.</p>
+<p>Tiền fiat do các chính-phủ phát-hành cũng có-thể được thanh-toán qua những phương-tiện điện-tử như thẻ-thanh-toán, chuyển-khoản… nhưng nó không phải là tiền-điện-tử.</p>
 <p>Tiếp-theo tiền-điện-tử là <b>NFT</b>—Non-Fungible Token, là những token có tính duy-nhất trong blockchain, nó khác với những tiền-điện-tử đã nêu ở trên. NFT có-thể là một dạng giấy-chứng-nhận kỹ-thuật-số, chứa thông-tin về một đối-tượng trong thế-giới thật; ví-dụ như số seri của một đôi-giày trong một đợt sản-xuất hạn-chế, quyền sở-hữu một mảnh-đất, vé dự sự-kiện. Hoặc NFT là một sản-phẩm dạng số như một file ghi-âm giọng nói người, một file hình. Các nghệ-sĩ có-thể bán file nhạc, file hình dưới dạng NFT. Các file hình hay file nhạc đó có thể được sao-chép ra nhiều bản nhưng những bản-sao không phải là NFT, không có giá-trị cao. Mỗi NFT có một key riêng để xác-định chủ sở-hữu, không thể làm giả được. NFT có-thể được chuyển-nhượng bằng cách dùng private key ký lệnh giống như chuyển tiền-điện-tử.</p>
 <p>Sau-đây là một vài cách miễn-phí để có tiền-điện-tử.</p>
 
@@ -289,11 +289,12 @@ Giao-dịch trên sàn thì tốn phí-giao-dịch, phí chuyển bitcoin vào v
 <h4>Staking</h4>
 <p>Staking là gửi token trong một thời-hạn để được thưởng giống như gửi tiết-kiệm ở ngân-hàng. Trong app Sweat Wallet gọi là Grow Jar. Bạn có thể tạo nhiều Grow Jar. Mỗi lần tạo một Grow Jar bạn phải tốn một ít phí.</p>
 <h4>Swap</h4>
-<p>Khi bạn cài app Sweatcoin thì Sweat thật-sự tạo cho bạn một tài-khoản NEAR để chứa Sweat token, và tặng cho bạn 0,05 NEAR token để thực-hiện một số giao-dịch đầu-tiên, mỗi giao-dịch tốn gas từ 0,00004 đến 0,00177 NEAR token. Sau nhiều lần staking thì tôi còn lại 0,01965 NEAR token và không giao-dịch được nữa vì phải Reserved for storage 0,00476 NEAR và Reserved for transactions 0,01489 NEAR. Để có thêm NEAR token, tôi phải swap—đổi-tiền từ Sweat sang NEAR tại <a href="https://ref.finance" target='_blank'>ref.finance</a></p>
+<p>Khi bạn cài app Sweatcoin thì Sweat thật-sự đã tạo cho bạn một tài-khoản NEAR để chứa Sweat token, và tặng cho bạn 0,05 NEAR token để thực-hiện một số giao-dịch đầu-tiên. Bạn có thể swap—đổi-tiền từ Sweat sang NEAR tại <a href="https://ref.finance" target='_blank'>ref.finance</a>.
+<br>Tuy-nhiên, trước khi thực-hiện giao-dịch thì bạn cần phải có ít nhất 0,1 NEAR, bạn cần phải mua NEAR bằng tiền fiat từ <a href="https://wallet.near.org" target='_blank'>wallet NEAR</a>.</p>
 
 <h4>Tương-lai</h4>
 <p>Sweatcoin sẽ ghi nhận được thêm các kiểu hoạt-động cơ-thể khác ngoài bước-chân.
-<br>Sweat đặt kế-hoạch biến số-liệu hoạt-động cơ-thể của từng người thành hàng-hoá của riêng mỗi người—dưới dạng NFT, và mỗi người có-thể bán những NFT của mình cho các công-ty nghiên-cứu và sản-xuất các dụng-cụ liên-quan đến sức-khoẻ.</p>
+<br>Sweat có kế-hoạch biến số-liệu hoạt-động cơ-thể của từng người thành hàng-hoá của riêng mỗi người—dưới dạng NFT, và mỗi người có-thể bán những NFT của mình cho các công-ty nghiên-cứu và sản-xuất các dụng-cụ liên-quan đến sức-khoẻ. Bạn càng đi bộ lâu năm thì NFT của bạn càng có giá, hãy sớm tích-luỹ số bước chân bằng cách cài app Sweatcoin vào smartphone qua <a href="https://sweatco.in/app/sf/bile44591842225" target='_blank'>link sau</a>.</p>
 
 <h3 id="brave">Brave Rewards</h3>
 <p>Brave là một phần-mềm web browser với đặc-điểm cho phép bạn kiểm-soát việc xem quảng-cáo. Brave sẽ lọc bỏ phần-lớn quảng-cáo trong các trang web và đề-nghị bạn xem những quảng-cáo từ những nguồn chọn-lọc. Brave hiện ra một dòng tóm-tắt về quảng-cáo, bạn tự quyết-định xem hay không xem quảng-cáo đó. Khi xem một quảng-cáo, bạn được tặng một ít BAT—Basic Attention Token. BAT là token dựa trên blockchain Ethereum. BAT hiện đang có giá 23 cent Mỹ.</p>
